# gokart_mlflow_sample

./: .gitignore  README.md  pyproject.toml
src/: evaluation.py  mlflow_gokart.py  param.ini  pipeline.py
src/datasets/: download_sushi_task.sh  sushi_dataset.py
src/models/: pyterrier_model.py  random_model.py
